# VirtualEmbeddedDevice

./: LICENSE  README.md  TODO.md
controller/: server.py
device/: CMakeLists.txt
device/include/: device.h  program.h  protocol.h  tcp_client.h
device/include/components/: button.h  component.h  led.h  motor.h  sensor.h
device/layout/: example_components.json
device/src/: device.cpp  main.cpp  program.cpp  protocol.cpp  tcp_client.cpp
device/src/components/: button.cpp  component.cpp  led.cpp  motor.cpp  sensor.cpp
server/: device_session.py  protocol.py  tcp_server.py
testfiles/: test_client.cpp  test_client.py  test_server.py  threading.py
testfiles/protocol/: protocol.cpp  protocol.h
testfiles/testTCP/: test_client.cpp  test_server.py
